@@ -1,3 +1,4 @@
+* Allow deferral on any kind of loan including graduated and balloon
 * Allow to recalculate increment dates from first payment date
 
 Version 1.6 - 2015-12-23
